# heardle

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  PROJECT_PLAN.md  README.md  SETUP.md  pyproject.toml
docs/: architecture.md  audio_pipeline.md  corpus_threshold.md  deployment.md  oauth_flow.md
scripts/: browser_diagnose.py  browser_diagnose_firefox.py  load_corpus.py  plot_corpus_distribution.py
src/heardle/: __init__.py  api.py  auth.py  config.py  corpus.py  deezer.py  game.py  itunes.py  spotify.py
src/heardle/static/: autocomplete.js  player.js  styles.css
src/heardle/templates/: base.html  game.html  index.html
src/heardle/templates/partials/: game_body.html
tests/: conftest.py
tests/integration/: test_spotify_live.py
tests/reports/: 2026-04-19-phase6-initial-verification.md  2026-04-19-phase7-itunes-pivot.md
tests/unit/: test_api.py  test_auth.py  test_corpus.py  test_deezer.py  test_game.py  test_itunes.py  test_spotify.py
